Working base version

--- a/src/content/blog/collatz.mdx
+++ b/src/content/blog/collatz.mdx
@@ -1,8 +1,8 @@
 ---
-title: 'Collatz Conjecture Visualisation'
+title: 'Collatz Conjecture Visualization'
 description: 'One of the most famous unsolved problems in mathematics'
 pubDate: 'Feb 15 2025'
-heroImage: '../../assets/images/collatz_figure_title2.png'
+heroImage: '../../assets/images/collatz_figure_title.png'
 category: 'Math'
 tags: ['Python', 'Collatz']
 ---
@@ -30,14 +30,14 @@ Now the question is, can you prove that this sequence will always reach 1, no ma
 
 The other thing about the conjecture is that it is a great example of a simple problem that can produce incredibly complex and beautiful patterns. The code below visualizes the Collatz Conjecture by drawing lines between the numbers in the sequence.
 After each number, the code calculates the next number in the sequence and draws a line to it. The result is a beautiful and intricate pattern that is unique to each starting number.
-To get the disired effect we change the angle of the line depending on the number being odd or even.
+To get the desired effect we change the angle of the line depending on the number being odd or even.
 
 ## The Code
 
-While watching some Visualisations I came across [Ed Baker](https://ebaker.me.uk/notes/collatz-conjecture.html)'s visualisations of the Collatz Conjecture.
+While watching some Visualizations I came across [Ed Baker](https://ebaker.me.uk/notes/collatz-conjecture.html)'s visualizations of the Collatz Conjecture.
 I was fascinated by the beauty of the patterns and wanted to recreate them myself.
 I used his R code as a base and then rewrote it in Python.
-Feel free to play around with the code and create your own visualisations. The Title Image of this post is a result of the code below.
+Feel free to play around with the code and create your own visualizations. The Title Image of this post is a result of the code below.
 
 ```python
 import numpy as np
