--- a/src/content/blog/whoami.mdx
+++ b/src/content/blog/whoami.mdx
@@ -2,20 +2,20 @@
 title: 'whoami'
 description: 'Some Facts about me'
 pubDate: 'Feb 15 2025'
-heroImage: '../../assets/images/jenson2.jpeg'
+heroImage: '../../assets/images/jenson.jpeg'
 category: 'About Me'
 tags: ['LinkedIn', 'GitHub']
 ---
 
 **Hi I am Jenson Reggentin**
 
-I am a Buisness Informatics Student currently living in Stralsund. Currently, I work at Bosch in the factory in Ansbach. There I develop Software to monitor production lines.
+I am a Business Informatics Student currently living in Stralsund. Currently, I work at Bosch in the factory in Ansbach. There I develop Software to monitor production lines.
 
-## What am Intrested in
+## What am I Interested in?
 
 My main interests are backend development, data engineering, and DevOps. Also, from time to time, I like to explore new technologies and take part in CTFs at Hack The Box.
 Currently, I am learning about Docker, Golang and Log-Monitoring.
-For work I am currently implementing a logging solution for the Node.js backend proccesses.
+For work I am currently implementing a logging solution for the Node.js backend processes.
 
 I also really wanna work with Kubernetes and Terraform in the future.
 
