Update with new links

--- a/src/content/blog/whoami.mdx
+++ b/src/content/blog/whoami.mdx
@@ -9,7 +9,7 @@ tags: ['LinkedIn', 'GitHub']
 
 **Hi I am Jenson Reggentin**
 
-I am a Business Informatics Student currently living in Stralsund. Currently, I work at Bosch in the factory in Ansbach. There I develop Software to monitor production lines.
+I am a Business Informatics Student currently living in Stralsund. Right now I work at Bosch in the factory in Ansbach. There I develop Software to monitor production lines.
 
 ## What am I Interested in?
 
