--- a/src/content/blog/whoami.mdx
+++ b/src/content/blog/whoami.mdx
@@ -9,13 +9,13 @@ tags: ['LinkedIn', 'GitHub']
 
 **Hi I am Jenson Reggentin**
 
-I am a Business Informatics Student currently living in Stralsund. Right now I work at Bosch in the factory in Ansbach. There I develop Software to monitor production lines.
+I am a Business Informatics Student living in Stralsund. Right now I work at Bosch in the factory in Ansbach. There I develop Software to monitor production lines.
 
 ## What am I Interested in?
 
 My main interests are backend development, data engineering, and DevOps. Also, from time to time, I like to explore new technologies and take part in CTFs at Hack The Box.
 Currently, I am learning about Docker, Golang and Log-Monitoring.
-For work I am currently implementing a logging solution for the Node.js backend processes.
+For work I am at the moment my main task is implementing a logging solution for the Node.js backend processes.
 
 I also really wanna work with Kubernetes and Terraform in the future.
 
