--- a/src/content/blog/whoami.mdx
+++ b/src/content/blog/whoami.mdx
@@ -15,7 +15,7 @@ I am a Business Informatics Student living in Stralsund. Right now I work at Bos
 
 My main interests are backend development, data engineering, and DevOps. Also, from time to time, I like to explore new technologies and take part in CTFs at Hack The Box.
 Currently, I am learning about Docker, Golang and Log-Monitoring.
-For work at the moment my main task is implementing a logging solution for the Node.js backend processes.
+At the moment my main task, at work, is implementing a logging solution for the Node.js backend processes. And fixing bugs whenever they appear in frontend,backend or the data pipeline.
 
 I also really wanna work with Kubernetes and Terraform in the future.
 
