--- a/src/content/blog/whoami.mdx
+++ b/src/content/blog/whoami.mdx
@@ -9,17 +9,18 @@ tags: ['LinkedIn', 'GitHub']
 
 **Hi I am Jenson Reggentin**
 
-I am a Business Informatics Student living in Stralsund. Right now I work at Bosch in the factory in Ansbach. There I develop Software to monitor production lines.
+I am a Business Informatics Student living in Stralsund. Right now, I work at Bosch in the factory in Ansbach. There I develop Software, to monitor production lines.
 
 ## What am I Interested in?
 
 My main interests are backend development, data engineering, and DevOps. Also, from time to time, I like to explore new technologies and take part in CTFs at Hack The Box.
 Currently, I am learning about Docker, Golang and Log-Monitoring.
-At the moment my main task, at work, is implementing a logging solution for the Node.js backend processes. And fixing bugs whenever they appear in frontend,backend or the data pipeline.
+At the moment my main task, at work, is implementing a logging solution for the Node.js backend processes. And also fixing bugs whenever they appear in frontend, backend or the data pipeline.
 
-I also really wanna work with Kubernetes and Terraform in the future.
+I also really wanna work with Kubernetes and Terraform in the future. But I lack the Hardware to run a Kubernetes Cluster at home. So I am waiting for the day I can afford a decent server.
 
 ### Current Projects
 
 At the Moment my main hobby project is a task manager to organize montage teams. The project is written in Golang and uses a Postgres Database. The Frontend is written in React-Native.
 I will probably write a blog post about this project in the future.
+Right now the biggest challenges are ios compatibility and just not enough features. The project is still in the early stages of development.
