--- a/src/content/blog/AIfromtheperspectiveofaJunior.mdx
+++ b/src/content/blog/AIfromtheperspectiveofaJunior.mdx
@@ -17,17 +17,19 @@ Has it slowed down my learning?
 
 **Let's find out.**
 
-## Can I Code?
+## My First Steps in Coding
 
 I am a fairly new Developer. I got my first coding job just last year as a working student and now I am searching for my first job after University.  
 My first experience with coding was in 8th grade. I wrote a simple Arduino program to make an LED blink.  
 It was fun! My teacher and I expanded it into a full traffic light model, all controlled by Arduino.  
 After that I programmed some things here and there but University and me working as a Programmer definitely elevated my abilities by a lot.
 
+## Can Junior Devs Code Without AI?
+
 If we follow the hyperbole of the article, I should not be able to code without AI. I should be an illiterate programmer just stringing along words until something makes sense.  
 Now I am by no means the best Programmer, and sometimes it really does feel like I am completely illiterate.
 But I don't use AI at work, some of my code was ok, some mid and hopefully the majority was good. So I would go as far as to call myself a semi competent programmer.
-Now the real point of the article is that AI is slowing down the learning process off new devs.
+So, do I think AI has made me a worse learner? That's the real debate. Let's break it down
 
 ## Has AI slowed down my learning process?
 
@@ -68,4 +70,6 @@ Well time to ask Chatty.
 Chatty again and again removed and added the same packages over and over again, to solve vulnerabilities. After like 45mins of doing various Chatty "fixes" I finally get frustrated enough to do it myself.  
 It took like 5 mins and I resolved the conflict.
 
-Lesson learned, don't rely on ChatGPT, one more lesson to hopefully become a competent senior dev in the future.
+Lesson learned: AI is a great tool, but it can't replace real understanding.
+If I had trusted my instincts earlier, I would have fixed my npm issue in minutes instead of hours.
+The best devs don't just use AI—they know when NOT to use it.
