--- a/src/content/blog/AIfromtheperspectiveofaJunior.mdx
+++ b/src/content/blog/AIfromtheperspectiveofaJunior.mdx
@@ -27,14 +27,15 @@ After that I programmed some things here and there but University and me working
 ## Can Junior Devs Code Without AI?
 
 If we follow the hyperbole of the article, I should not be able to code without AI. I should be an illiterate programmer just stringing along words until something makes sense.  
-Now I am by no means the best Programmer, and sometimes it really does feel like I am completely illiterate.
+Now I'm by no means the best programmer, and sometimes it really does feel like I have no clue what I'm doing.
 But I don't use AI at work, some of my code was ok, some mid and hopefully the majority was good. So I would go as far as to call myself a semi competent programmer.
-So, do I think AI has made me a worse learner? That's the real debate. Let's break it down
+So, has AI actually made me a worse learner? That's the real debate. Let's break it down.
 
-## Has AI slowed down my learning process?
+## Does AI Actually Make You a Worse Developer?
 
 Now this is pretty hard to answer but I would guess yes, at least a little.  
-I recently started to learn Golang, and in the beginning I used a lot of AI assistance, to get me up and running which made learning the syntax pretty slow. As I just modified the generated Code.  
+I recently started learning Golang, and at first, I relied heavily on AI assistance. It helped me get up and running, but it also slowed down my ability to learn the syntax—I was mostly just modifying generated code.  
+But this issue quickly disappears when your codebase grows. Once you start making bigger changes across multiple files, AI stops being useful. That's when you have to learn the language properly.
 But this quickly gets remedied as code changes get bigger and multiple files get impacted.  
 Sooner or later, if you are working solo, you will have to make complicated changes, and AI will not help you. Forcing you to learn via good old Stack Overflow and other traditional resources.  
 The reason I don't use AI at work is exactly that. I pretty much never have simple changes. Most of the time, changes need to be made in multiple files across Frontend and Backend.  
@@ -45,7 +46,7 @@ I could have just googled, looked up demos and then have decided.
 The way I did it was, to ask Chatty what it thought, then I asked for pros and cons and then I decided that react-native-big-calendar is the way to go.  
 Now I would say that this process, is way better then the original way of trying to find some medium article or Stack Overflow question, dealing with the same issue.
 
-## The bigger issue
+## The Real Problem Isn't AI - It's the 'Career Coders'
 
 AI has enabled a new way to be productive with minimal effort
 
@@ -70,6 +71,6 @@ Well time to ask Chatty.
 Chatty again and again removed and added the same packages over and over again, to solve vulnerabilities. After like 45mins of doing various Chatty "fixes" I finally get frustrated enough to do it myself.  
 It took like 5 mins and I resolved the conflict.
 
-Lesson learned: AI is a great tool, but it can't replace real understanding.
-If I had trusted my instincts earlier, I would have fixed my npm issue in minutes instead of hours.
-The best devs don't just use AI—they know when NOT to use it.
+Lesson learned: AI is a great tool, but it can't replace real understanding.  
+If I had trusted my instincts earlier, I would have fixed my npm issue in five minutes instead of 45. AI can help, but it's not a substitute for thinking.  
+The best developers don't just use AI. They know when to ignore it.
